Added readme, updated main class

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
         "psr-4": {"Kapoko\\AssetJsonReader\\": ""}
     },
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "symfony/filesystem": "^5.2"
+    }
 }
